--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="top-container">
     <img class="right-icon" src="" alt="">
     <h1 class="im-yossi">I'm Yossi.</h1>
-    <p class="programer">a programer</p>
+    <p class="programer">a programmer</p>
     <img class="left-icon" src="" alt="">
     <img class="profile" width="200px" src="images/profile.png" alt="profile-image">
     <h2 class="hello">Hello</h2>
