--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/in/yossi-oring-b73996215/">LinkedIn</a>
     <a class="footer-link" href="https://www.instagram.com/yossi_oring/">Instagram</a>
-    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <a class="footer-link" href="https://flyingcoderjoe.github.io/Yossi-Oring-personal-site/">Website</a>
     <p class="copyright">© 2021 Yossi Oring.</p>
   </div>
 
